# blueKit

./: .cursorrules  .gitignore  CLAUDE.md  README.md  SETUP.md  blueprint.md  index.html  package-lock.json  package.json  tasks.md  tsconfig.json  vite.config.ts
.bluekit/: Glossary.md  Googly.md  Pickup.md  Story.md  Toolkit.md  base-tab-content.md  button-component.md  clones.json  feature-flags.md  form-validation.md  global-action-bar.md  ipc-walkthrough.md  loading-state.md  product-overview.md  product.md  project-registry-kit-retrieval.md  rust-backend-walkthrough.md  tasks.md  tauri-file-watching.md
.bluekit/agents/: rust-expert.md  rust-production-expert.md  tauri-rust-database-operations.md
.bluekit/channel/: bluekit-overview.md
.bluekit/commands/: New Command.md  SQLite Database Commands.md  sqlite.md
.bluekit/components/: select.md
.bluekit/diagrams/: artifact-flow-architecture.mmd  backend-architecture.mmd  buildFolderTree-inconsistency.mmd  database-schema-tasks-clones.mmd  file-watcher-optimization-flow.mmd  file-watching-flickering-issue.mmd  frontend-architecture.mmd  github-integration-flow.mmd  incremental-update-system-architecture.mmd  kit-markdown-viewer-imports.mmd  markdown-viewer-usage.mmd  mermaid-diagram-viewer-flow.mmd  project-detail-data-flow.mmd  project-detail-data-loading-architecture.mmd  resource-viewer-refactoring.mmd  task-database-flow.mmd  watcher-event-flow.mmd
.bluekit/features/: Bookmarks.md  Links.md  Tabs.md  hotkey.md  nav.md
.bluekit/fleets/: viewer.md
.bluekit/ideas/: idea.md
.bluekit/investigation/: Random.md  library.md  release.md  restart.md  wishlist.md
.bluekit/kits/: add-to-project.md  artifact-folder-system.md  base-tab-content.md  bluekit-notebook-mcp-server.md  empty-state-component.md  feature-flags.md  folder-to-collection-design-migration.md  form-validation.md  github-device-flow-auth.md  global-action-bar.md  hybrid-glassmorphic-markdown-editor.md  indexeddb-caching.md  liquid-glass-switcher.md  local-project-scanner.md  log-producer-integration.md  markdown-notebook-mcp-server.md  note-view-markdown-editor.md  page-playground.md  realtime-file-watching.md  resource-context-menu.md  side-menu-file-preview.md  spotlight-interaction.md  spotlight-popover-flow.md
.bluekit/learning/: Design Patterns.md
.bluekit/links/: Icons.md  Links.md
.bluekit/notes/: Blur Complexity.md  conwell-coffee-house.md  note-view-color-theme.md  notes.md  tasks.md
.bluekit/plan/: checkpoints-system.md  git-commit-workflow.md  github-integration.md  kit-overview-enhancements.md  library-implementation-details.md  resource-edit-delete.md  sample.md  state-module.md  walkthrough-format-types.md
.bluekit/reference/: theme-colors.md
.bluekit/scrap/: backbone-elevator-pitch.md
.bluekit/stories/: Tabs Overhaul Story.md
.bluekit/tasks/: 3d-rubiks-cube-implementation.md  Kits and Walkthroughs revamp.md  (+2 more)
TestVault/: BlueKit is cool.md  Welcome.md
research/: crash-problem.md
src/: App.tsx  ipc.ts  main.tsx  path.d.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: create_icons.sh
src-tauri/src/: README.md  cache.rs  commands.rs  main.rs  state.rs  utils.rs  watcher.rs
src-tauri/src/core/: mod.rs  watcher.rs
src-tauri/src/db/: migrations.rs  mod.rs  plan_operations.rs  project_operations.rs  task_operations.rs  walkthrough_operations.rs
src-tauri/src/db/entities/: checkpoint.rs  library_artifact.rs  library_catalog.rs  library_collection.rs  library_folder.rs  library_resource.rs  library_subscription.rs  library_variation.rs  library_workspace.rs  mod.rs  plan.rs  plan_document.rs  plan_link.rs  plan_milestone.rs  plan_phase.rs  project.rs  task.rs  task_project.rs  walkthrough.rs  walkthrough_note.rs  walkthrough_takeaway.rs
src-tauri/src/integrations/: mod.rs
src-tauri/src/integrations/git/: mod.rs  operations.rs
src-tauri/src/integrations/github/: auth.rs  commit_cache.rs  github.rs  keychain.rs  mod.rs  oauth_server.rs
src-tauri/src/integrations/supabase/: auth_server.rs  mod.rs
test-scripts/: memory-leak-test.sh  stress-test-watchers.sh
(+682 files in other folders)
